# gemini-mcp-python

./: .env.example  README.md  cli_orchestrator.py  gemini  pyproject.toml  test_complete.py  test_direct.py  test_output.py  test_results.json
src/gemini_mcp/: __init__.py  gemini_client.py  models.py  orchestrator.py  server.py
tests/: fibonacci.py  generated_calculator.py  test_data.json  test_math.py  test_simple.py  test_strings.py
